src/test/resources/org/nest/nestml/_cocos/valid/missingReturnStatementInFunction.nestml
neuron FunctionHasReturnStatement_valid:

  function empty1(x mV) real:
    if x > 0:
        return 3.0
    else:
       return 2.0
    end
  end

  function empty2(x mV) void:

  end
end
