src/test/resources/org/nest/nestml/_cocos/invalid/missingReturnStatementInFunction.nestml
component FuncHasReturnStatement_invalid:

  function empty1(x mV) real:
    if x > 0:
        return x * 2
    end
    # missing
  end

  function empty2(x mV) real:
    if x > 0:
        return x * 2
    elif true:
        # missing
    end
  end
end
